Column mapping for event log support added
Closes #3
