# app/handlers.go
@@ -54,15 +54,16 @@ func SwaggerJSON(app *Application) http.HandlerFunc {
 //     description: Callback request
 //     required: true
 //     schema:
-//       $ref: '#/definitions/ApiCallbackRequest'
+//     $ref: '#/definitions/ApiCallbackRequest'
 //
 // Responses:
-//   default:
-//     schema:
-//       $ref: '#/definitions/ApiResponseError'
-//   200:
-//     schema:
-//       $ref: '#/definitions/ApiCallbackRequest'
+//
+//	default:
+//	  schema:
+//	    $ref: '#/definitions/ApiResponseError'
+//	200:
+//	  schema:
+//	    $ref: '#/definitions/ApiCallbackRequest'
 func SampleCallback(app *Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		var payload model.ApiCallbackRequest
@@ -85,9 +86,10 @@ func SampleCallback(app *Application) http.HandlerFunc {
 //
 // ---
 // Responses:
-//   default:
-//     schema:
-//       $ref: '#/definitions/ApiJobsResponse'
+//
+//	default:
+//	  schema:
+//	    $ref: '#/definitions/ApiJobsResponse'
 func GetJobs(app *Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		apiResponse := model.ApiJobsResponse{Jobs: app.queue.Jobs}
@@ -114,15 +116,16 @@ func GetJobs(app *Application) http.HandlerFunc {
 //     description: Description of a job
 //     required: true
 //     schema:
-//       $ref: '#/definitions/ApiRequest'
+//     $ref: '#/definitions/ApiRequest'
 //
 // Responses:
-//   default:
-//     schema:
-//       $ref: '#/definitions/ApiResponseError'
-//   200:
-//     schema:
-//       $ref: '#/definitions/ApiSingleJobResponse'
+//
+//	default:
+//	  schema:
+//	    $ref: '#/definitions/ApiResponseError'
+//	200:
+//	  schema:
+//	    $ref: '#/definitions/ApiSingleJobResponse'
 func PostJob(app *Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		// Read the event log from the request body
@@ -142,7 +145,7 @@ func PostJob(app *Application) http.HandlerFunc {
 		}
 		_ = r.Body.Close()
 
-		job, err := model.NewJob(apiRequest.EventLogURL_, apiRequest.CallbackEndpointURL_, app.config.ResultsDir)
+		job, err := model.NewJob(apiRequest.EventLogURL_, apiRequest.CallbackEndpointURL_, apiRequest.ColumnMapping, app.config.ResultsDir)
 		if err != nil {
 			message := fmt.Sprintf("cannot create a job; %s", err)
 			reply(w, http.StatusBadRequest, model.ApiResponseError{Error: message}, app.logger)
@@ -168,7 +171,9 @@ func PostJob(app *Application) http.HandlerFunc {
 
 func PostJobFromBody(app *Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		job, err := app.newJobFromRequestBody(r.Body)
+		columnMapping := columnMappingFromRequest(r)
+
+		job, err := app.newJobFromRequestBody(r.Body, columnMapping)
 		if err != nil {
 			message := fmt.Sprintf("failed to create a job from the request body; %s", err)
 			reply(w, http.StatusBadRequest, model.ApiResponseError{Error: message}, app.logger)
@@ -198,12 +203,13 @@ func PostJobFromBody(app *Application) http.HandlerFunc {
 //
 // ---
 // Responses:
-//   default:
-//     schema:
-//       $ref: '#/definitions/ApiResponseError'
-//   200:
-//     schema:
-//       $ref: '#/definitions/ApiJobsResponse'
+//
+//	default:
+//	  schema:
+//	    $ref: '#/definitions/ApiResponseError'
+//	200:
+//	  schema:
+//	    $ref: '#/definitions/ApiJobsResponse'
 func DeleteJobs(app *Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		err := app.queue.Clear()
@@ -249,12 +255,13 @@ func DeleteJobs(app *Application) http.HandlerFunc {
 //     type: string
 //
 // Responses:
-//   default:
-//     schema:
-//       $ref: '#/definitions/ApiResponseError'
-//   200:
-//     schema:
-//       $ref: '#/definitions/ApiSingleJobResponse'
+//
+//	default:
+//	  schema:
+//	    $ref: '#/definitions/ApiResponseError'
+//	200:
+//	  schema:
+//	    $ref: '#/definitions/ApiSingleJobResponse'
 func GetJobByID(app *Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		var apiResponse model.ApiSingleJobResponse
@@ -292,12 +299,13 @@ func GetJobByID(app *Application) http.HandlerFunc {
 //     type: string
 //
 // Responses:
-//   default:
-//     schema:
-//       $ref: '#/definitions/ApiResponseError'
-//   200:
-//     schema:
-//       $ref: '#/definitions/ApiSingleJobResponse'
+//
+//	default:
+//	  schema:
+//	    $ref: '#/definitions/ApiResponseError'
+//	200:
+//	  schema:
+//	    $ref: '#/definitions/ApiSingleJobResponse'
 func CancelJobByID(app *Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -344,4 +352,53 @@ func checkError(err error, message string, logger *log.Logger) {
 		return
 	}
 	logger.Printf("%s; %s", message, err)
+}
+
+func columnMappingFromRequest(r *http.Request) map[string]string {
+	vars := mapFromRawQuery(r.URL.RawQuery)
+
+	var (
+		caseID    string
+		activity  string
+		resource  string
+		startTime string
+		endTime   string
+		ok        bool
+	)
+
+	columnMapping := make(map[string]string)
+
+	caseID, ok = vars["case"]
+	if ok {
+		columnMapping["case"] = caseID
+	}
+	activity, ok = vars["activity"]
+	if ok {
+		columnMapping["activity"] = activity
+	}
+	resource, ok = vars["resource"]
+	if ok {
+		columnMapping["resource"] = resource
+	}
+	startTime, ok = vars["start_timestamp"]
+	if ok {
+		columnMapping["start_timestamp"] = startTime
+	}
+	endTime, ok = vars["end_timestamp"]
+	if ok {
+		columnMapping["end_timestamp"] = endTime
+	}
+
+	return columnMapping
+}
+
+func mapFromRawQuery(query string) map[string]string {
+	queryMap := make(map[string]string)
+	for _, pair := range strings.Split(query, "&") {
+		values := strings.Split(pair, "=")
+		if len(values) == 2 {
+			queryMap[values[0]] = values[1]
+		}
+	}
+	return queryMap
 }
